--- a/apps-other/ytDownloader/io.github.aandrew_me.ytdn.desktop
+++ b/apps-other/ytDownloader/io.github.aandrew_me.ytdn.desktop
@@ -4,6 +4,6 @@ Comment=Download videos and audios from YouTube and other sites
 Exec=/usr/bin/flatpak run --branch=stable --arch=x86_64 --command=run.sh io.github.aandrew_me.ytdn
 Type=Application
 Icon=io.github.aandrew_me.ytdn
-Categories=Utility;
+Categories=
 X-Flatpak=io.github.aandrew_me.ytdn
-Hidden=true
+Hidden=false
