--- a/apps-system/bottles/com.usebottles.bottles.desktop
+++ b/apps-system/bottles/com.usebottles.bottles.desktop
@@ -5,11 +5,11 @@ Icon=com.usebottles.bottles
 Exec=/usr/bin/flatpak run --branch=stable --arch=x86_64 --command=bottles --file-forwarding com.usebottles.bottles @@u %u @@
 Terminal=false
 Type=Application
-Categories=Utility;GNOME;GTK;
+Categories=
 StartupNotify=true
 StartupWMClass=bottles
 MimeType=x-scheme-handler/bottles;application/x-ms-dos-executable;application/x-msi;application/x-ms-shortcut;application/x-wine-extension-msp;
 Keywords=wine;windows;
 X-GNOME-UsesNotifications=true
 X-Flatpak=com.usebottles.bottles
-Hidden=true
+Hidden=false
