--- a/apps-system/fsearch/io.github.cboxdoerfer.FSearch.desktop
+++ b/apps-system/fsearch/io.github.cboxdoerfer.FSearch.desktop
@@ -1,12 +1,12 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=FSearch
+Name=Search
 Comment=A file search application focusing on performance and advanced features
 Icon=io.github.cboxdoerfer.FSearch
 TryExec=fsearch
 Exec=fsearch
-Categories=GTK;Utility;Core;
+Categories=
 Keywords=search;fsearch;files;folders;music;video;documents;find;tool;everything;
 StartupNotify=true
-Hidden=true
+Hidden=false
