--- a/apps-system/gnome-disk-utility/org.gnome.DiskUtility.desktop
+++ b/apps-system/gnome-disk-utility/org.gnome.DiskUtility.desktop
@@ -1,14 +1,13 @@
 [Desktop Entry]
-Name=Disks
+Name=Gnome Disks
 Comment=Manage Drives and Media
 Keywords=disk;drive;volume;harddisk;hdd;disc;cdrom;dvd;partition;iso;image;backup;restore;benchmark;raid;luks;encryption;S.M.A.R.T.;smart;
 Exec=gnome-disks
 Icon=org.gnome.DiskUtility
 Terminal=false
-Type=Application
 StartupNotify=true
-Categories=GNOME;GTK;Utility;X-GNOME-Utilities;
-DBusActivatable=true
+Type=Application
+Categories=
 X-Purism-FormFactor=Workstation;Mobile;
 X-GNOME-UsesNotifications=true
-Hidden=true
+Hidden=false
