--- a/apps-system/gnome-software/org.gnome.Software.desktop
+++ b/apps-system/gnome-software/org.gnome.Software.desktop
@@ -1,15 +1,13 @@
 [Desktop Entry]
-Name=Software
+Name=Software Store
 Comment=Add, remove or update software on this computer
 Icon=org.gnome.Software
 Exec=gnome-software %U
 Terminal=false
 Type=Application
-Categories=GNOME;GTK;System;PackageManager;
+Categories=
 Keywords=Updates;Upgrade;Sources;Repositories;Preferences;Install;Uninstall;Program;Software;App;Store;
-StartupNotify=true
 MimeType=x-scheme-handler/appstream;x-scheme-handler/apt;x-scheme-handler/snap;
 X-GNOME-UsesNotifications=true
-DBusActivatable=true
 X-Purism-FormFactor=Workstation;Mobile;
-Hidden=true
+Hidden=false
