--- a/apps-development/podman-desktop/settings.json
+++ b/apps-development/podman-desktop/settings.json
@@ -2,5 +2,7 @@
   "telemetry.enabled": false,
   "preferences.ExitOnClose": false,
   "preferences.TrayIconColor": "light",
-  "welcome.version": "never"
+  "welcome.version": "never",
+  "terminal.integrated.fontSize": 16,
+  "editor.integrated.fontSize": 12  
 }
