--- a/development/podman-desktop/settings.json
+++ b/development/podman-desktop/settings.json
@@ -5,5 +5,6 @@
   "welcome.version": "never",
   "terminal.integrated.fontSize": 16,
   "editor.integrated.fontSize": 12,
-  "preferences.appearance": "dark"
+  "preferences.appearance": "dark",
+  "preferences.navigationBarLayout": "icon + title"
 }
