--- a/development/vscodium/settings.json
+++ b/development/vscodium/settings.json
@@ -19,5 +19,8 @@
   "[erb]": {
     "editor.defaultFormatter": "mbessey.vscode-rufo",
     "editor.formatOnSave": false
-  }
+  },
+  "window.dialogStyle": "custom",
+  "window.titleBarStyle": "custom",
+  "window.menuBarVisibility": "compact"
 }
