add vscodium setting

--- a/development/vscodium/settings.json
+++ b/development/vscodium/settings.json
@@ -22,5 +22,5 @@
   },
   "window.dialogStyle": "custom",
   "window.titleBarStyle": "custom",
-  "window.menuBarVisibility": "compact"
+  "window.commandCenter": false
 }
