--- a/office/onlyoffice/DesktopEditors.conf
+++ b/office/onlyoffice/DesktopEditors.conf
@@ -1,6 +1,8 @@
 [General]
 UITheme=theme-classic-light
 editorWindowMode=true
-forcedRtl=false
-position=@Rect(2184 110 1148 800)
-titlebar=system
+position=@Rect(1988 140 1142 842)
+titlebar=custom
+
+[EditorsGeometry]
+0\position=@Rect(2038 190 1142 842)
