use system titlebar for onlyoffice

--- a/office/onlyoffice/DesktopEditors.conf
+++ b/office/onlyoffice/DesktopEditors.conf
@@ -2,7 +2,7 @@
 UITheme=theme-classic-light
 editorWindowMode=true
 position=@Rect(1988 140 1142 842)
-titlebar=custom
+titlebar=system
 
 [EditorsGeometry]
 0\position=@Rect(2038 190 1142 842)
