various theme and config changes

--- a/system/fsearch/fsearch.conf
+++ b/system/fsearch/fsearch.conf
@@ -18,8 +18,8 @@ action_after_file_open_mouse=false
 exit_on_escape=false
 show_indexing_status=true
 restore_window_size=true
-window_width=863
-window_height=666
+window_width=1038
+window_height=706
 show_listview_icons=true
 show_path_column=true
 show_type_column=false
@@ -28,8 +28,8 @@ show_size_column=true
 show_modified_column=true
 sort_ascending=true
 sort_by=Name
-name_column_width=250
-path_column_width=355
+name_column_width=302
+path_column_width=481
 extension_column_width=100
 type_column_width=100
 size_column_width=103
@@ -59,70 +59,14 @@ update_database_every_hours=0
 update_database_every_minutes=15
 exclude_hidden_files_and_folders=false
 follow_symbolic_links=false
-location_1=/boot
+location_1=/
 location_enabled_1=true
 location_update_1=true
 location_one_filesystem_1=false
-location_2=/etc
-location_enabled_2=true
-location_update_2=true
-location_one_filesystem_2=false
-location_3=/home
-location_enabled_3=true
-location_update_3=true
-location_one_filesystem_3=false
-location_4=/lib
-location_enabled_4=true
-location_update_4=true
-location_one_filesystem_4=false
-location_5=/lib64
-location_enabled_5=true
-location_update_5=true
-location_one_filesystem_5=false
-location_6=/opt
-location_enabled_6=true
-location_update_6=true
-location_one_filesystem_6=false
-location_7=/proc
-location_enabled_7=true
-location_update_7=true
-location_one_filesystem_7=false
-location_8=/root
-location_enabled_8=true
-location_update_8=true
-location_one_filesystem_8=false
-location_9=/run
-location_enabled_9=true
-location_update_9=true
-location_one_filesystem_9=false
-location_10=/sbin
-location_enabled_10=true
-location_update_10=true
-location_one_filesystem_10=false
-location_11=/srv
-location_enabled_11=true
-location_update_11=true
-location_one_filesystem_11=false
-location_12=/sys
-location_enabled_12=true
-location_update_12=true
-location_one_filesystem_12=false
-location_13=/tmp
-location_enabled_13=true
-location_update_13=true
-location_one_filesystem_13=false
-location_14=/usr
-location_enabled_14=true
-location_update_14=true
-location_one_filesystem_14=false
-location_15=/var
-location_enabled_15=true
-location_update_15=true
-location_one_filesystem_15=false
 exclude_location_1=/proc
-exclude_location_enabled_1=false
+exclude_location_enabled_1=true
 exclude_location_2=/sys
-exclude_location_enabled_2=false
+exclude_location_enabled_2=true
 exclude_files=
 
 [Filters]
